--- a/src/views/moviesList.ejs
+++ b/src/views/moviesList.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <figure>
+    <figure class="movies-list-logo">
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
     <h1 class="moviesListTitulo"></h1>
